package com.company.potions;

public class StandardPotion extends Potion{

    public StandardPotion(){
        super("StandardPotion", 2);
    }

}
