@startuml

title __POTIONS's Class Diagram__\n

  namespace  {
    namespace om.company {
      namespace potions {
        class com.company.potions.BigPotion {
            + BigPotion()
        }
      }
    }
  }
  

  namespace  {
    namespace om.company {
      namespace potions {
        abstract class com.company.potions.Potion {
            # potionLife : int
            + Potion()
            + Potion()
            + addLife()
            + getPotionLife()
            + interact()
        }
      }
    }
  }
  

  namespace  {
    namespace om.company {
      namespace potions {
        class com.company.potions.StandardPotion {
            + StandardPotion()
        }
      }
    }
  }
  

  com.company.potions.BigPotion -up-|> com.company.potions.Potion
  com.company.potions.Potion -up-|> com.company.Case
  com.company.potions.StandardPotion -up-|> com.company.potions.Potion


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
